Fix field-name-field-consultant-enrollment-date field alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -328,6 +328,8 @@ label,
   text-transform: capitalize;
 }
 
+.date-no-float {  width: 100%;  }
+
 .field-items ul,
 .field-items ol {
   overflow: hidden;
